# inputstream.ffmpegarchive

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
debian/: changelog.in  control  copyright  rules
depends/common/ffmpeg/: CMakeLists.txt  deps.txt  ffmpeg.sha256  ffmpeg.txt
inputstream.ffmpegarchive/: addon.xml.in
src/: StreamManager.cpp  StreamManager.h
src/stream/: DemuxStream.cpp  FFmpegArchiveStream.cpp  FFmpegArchiveStream.h  FFmpegStream.cpp  FFmpegStream.h
src/stream/ffmpegutils/: FFmpeg.cpp  URIUtils.cpp
src/stream/threads/platform/pthreads/: ThreadImpl.cpp
src/utils/: Log.h
